
MASTER

* Use a lazy match in add_order_by_for_association_limiting! to allow sub selects to be used. Resolves 
  ticket #11.

* Add default rake task back for testing. Runs the namespaced sqlserver:test_sqlserver_odbc. 
  Resolves ticket #10 [Ken Collins]

* Default value detection in column_definitions is kinder to badly formatted, or long winded user
  defined functions, for default values. Resolves ticket #8 [Ken Collins]

* Make sure bigint SQL Server data type can be used and converted back to Bignum as expected. [Ken Collins]


* 2.2.19 * (June 19th, 2009)

* Leave quoted column names as is. Resolves ticket #36 [Vince Puzzella]

* Changing add_limit! in ActiveRecord::Base for SQLServer so that it passes through any scoped :order 
  parameters. Resolves ticket #35 [Murray Steele]


* 2.2.18 * (June 5th, 2009)

* Column reflection on table name rescues LoadError and a few others. Resolves tickets #25 & #33 [Ken Collins]

* Added 2008 support. Resolves ticket #32 [Ken Collins]


* 2.2.17 * (May 14th, 2009)

* Add simplified type recognition for varchar(max) and nvarchar(max) under SQL Server 2005 to be a 
  :text type. This ensures schema dumper does the right thing. Fixes ticket #30. [Ken Collins]

* Tested ruby 1.9, ruby-odbc 0.9996, and DBI 0.4.1. Also added correct support for UTF-8 character 
  encoding going in and out of the DB. See before gist http://gist.github.com/111709 and after gist 
  http://gist.github.com/111719 [Ken Collins]


* 2.2.16 * (April 21st, 2009)

* Make add_limit_offset! only add locking hints (for tally) when the :lock option is present. Added tests 
  to make sure tally SQL is augmented correctly and tests to make sure that add_lock! is doing what it needs 
  for deep sub selects in paginated results. [Ken Collins]

* Add auto reconnect support utilizing a new #with_auto_reconnect block. By default each query run through 